src/test/ui/type/type-check/missing_trait_impl.stderr
error[E0369]: cannot add `T` to `T`
  --> $DIR/missing_trait_impl.rs:5:15
   |
LL |     let z = x + y;
   |             - ^ - T
   |             |
   |             T
   |
help: consider restricting type parameter `T`
   |
LL | fn foo<T: std::ops::Add<Output = T>>(x: T, y: T) {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0368]: binary assignment operation `+=` cannot be applied to type `T`
  --> $DIR/missing_trait_impl.rs:9:5
   |
LL |     x += x;
   |     -^^^^^
   |     |
   |     cannot use `+=` on type `T`
   |
help: consider restricting type parameter `T`
   |
LL | fn bar<T: std::ops::AddAssign>(x: T) {
   |         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0368, E0369.
For more information about an error, try `rustc --explain E0368`.
